# openvpn-network-applet

./: Makefile.am  configure.ac
control-applet/: Makefile.am  control-applet.c
data/: Makefile.am  control-applet-openvpn.desktop  org.maemo.OpenVPN.schemas  status-applet-openvpn.desktop
debian/: changelog  control  control-panel-openvpn.install  rules  status-area-openvpn.install  status-area-openvpn.postinst  status-area-openvpn.postrm
status-applet/: Makefile.am  status-applet.c
