desktopdir = $(hildonhomedesktopdir)
desktop_DATA = status-applet-openvpn.desktop

controldir = $(controlpaneldesktopdir)
control_DATA = control-applet-openvpn.desktop

icon48_DATA = \
	statusarea_openvpn_enabled.png \
	statusarea_openvpn_disabled.png

icon18_DATA = \
	statusarea_openvpn_connected.png \
	statusarea_openvpn_connecting.png

gconfschemasdir = $(sysconfdir)/gconf/schemas
dist_gconfschemas_DATA = org.maemo.OpenVPN.schemas
